# innopolis-plm

./: .env.example  .env.production  .gitignore  CLAUDE.md  CREDENTIALS.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: release.yml
docs/: API_GUIDE.md  PAGE_KIT.md  RELEASING.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/approvals/: page.tsx
src/app/bom/: page.tsx
src/app/bom-approvals/: page.tsx
src/app/cad/: page.tsx
src/app/changes/: page.tsx
src/app/cost/: page.tsx
src/app/documents/: page.tsx
src/app/inventory/: page.tsx
src/app/manufacturing/: page.tsx
src/app/parts/: page.tsx
src/app/procurement/: page.tsx
src/app/products/: page.tsx
src/app/project-details/: page.tsx
src/app/reports/: page.tsx
src/app/revisions/: page.tsx
src/app/settings/: page.tsx
src/app/suppliers/: page.tsx
src/app/user-details/: page.tsx
src/app/users/: page.tsx
src/auth/: credentials.ts  permissions.ts
src/components/auth/: login-screen.tsx  set-password-screen.tsx
src/components/brand/: logo.tsx
src/constants/: navigation.ts  status.ts
src/hooks/: use-global-shortcuts.ts
src/lib/: export.ts  utils.ts
src/mock/: db.ts  generate.ts  pools.ts  series.ts
src/providers/: index.tsx
src/stores/: auth-store.ts  selection-store.ts  ui-store.ts
src/styles/: globals.css
src/types/: index.ts
(+80 files in other folders)
