[package]
name = "innopolis-plm"
version = "0.1.0"
description = "Innopolis — next-generation BOM & PLM platform"
authors = ["Innopolis"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "innopolis_plm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
