[package]
name = "innopolis-plm"
version = "0.1.4"
description = "Innopolis — next-generation BOM & PLM platform"
authors = ["Innopolis"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "innopolis_plm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
